Updated z-index for status message, fixed hash change array index bug.

--- a/css/trunk.css
+++ b/css/trunk.css
@@ -86,7 +86,7 @@
     position: fixed; 
     text-align: center; 
     top: 0; 
-    z-index: 10001;
+    z-index: 10002;
     font-size: 15px;
     font-weight: bold;
     color: #000;
